<resources>
    <string name="app_name">MaterialDesign</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_fruits">Fruits</string>
    <string name="menu_vegetables">Vegetables</string>
    <string name="menu_nature">Nature</string>

    <string name="menu_theme_select">Theme selection</string>
    <string name="menu_theme_dob">Orange Brown</string>
    <string name="menu_theme_ic">Indigo Cyan</string>
    <string name="menu_theme_pg">Pink Gray</string>
    <string name="menu_theme_default">Default</string>

    <string name="menu_category_nav">Navigation</string>
    <string name="menu_start_activity_logo">Material Card</string>
    <string name="menu_start_activity_auth">Authorization</string>
    <string name="menu_start_activity_social">Social media</string>

    <!--Lesson1-->
    <string name="simple_text">Material Design</string>

    <!--Lesson2-->
    <string name="hint_login">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_action_enter">enter</string>
    <string name="button_action_exit">exit</string>
    <string name="ok_message">Successfully</string>
    <string name="invalid_message">Invalid input</string>
    <string name="snack_action_retry">RETRY</string>

    <string name="lesson_3_activity_title">Lesson 3</string>
    <string name="title_activity_content_selection">ContentSelectionActivity</string>

    <!-- Lesson 4 -->
    <string name="pic_fruits">Fruits</string>
    <string name="pic_vegetables">Vegetables</string>
    <string name="pic_nature">Nature</string>

    <string name="fruit_01">Fruit</string>
    <string name="fruit_02">Fruit</string>
    <string name="fruit_03">Fruit</string>
    <string name="fruit_04">Fruit</string>
    <string name="fruit_05">Fruit</string>
    <string name="fruit_06">Fruit</string>
    <string name="fruit_07">Fruit</string>
    <string name="fruit_08">Fruit</string>
    <string name="secondary_text">Secondary text</string>


    <!-- Lesson7 -->
    <string name="nature_activity_title">Nature collection</string>
    <string name="tab_text_1">Mountain</string>
    <string name="tab_text_2">River</string>
    <string name="tab_text_3">Village</string>
    <string name="like_count">0</string>
    <string name="star_count">0</string>

    <string name="info_fruits">
        Fruit comes in many varieties, and so do songs about fruit.
        Here\'s our list of the best fruit songs, as voted on by music fans like you.
        The best songs about fruit come from rock bands, hip-hop artists and country musicians.
        No matter what your taste, you will find a delicious fruit song on this comprehensive list.
        There are songs about apples, songs about cherries, and songs about bananas represented below,
        as well as songs about peaches, oranges and even coconuts.
        Fruit comes in many varieties, and so do songs about fruit.
        Here\'s our list of the best fruit songs, as voted on by music fans like you.
        The best songs about fruit come from rock bands, hip-hop artists and country musicians.
        No matter what your taste, you will find a delicious fruit song on this comprehensive list.
        There are songs about apples, songs about cherries, and songs about bananas represented below,
        as well as songs about peaches, oranges and even coconuts.
        Fruit comes in many varieties, and so do songs about fruit.
        Here\'s our list of the best fruit songs, as voted on by music fans like you.
        The best songs about fruit come from rock bands, hip-hop artists and country musicians.
        No matter what your taste, you will find a delicious fruit song on this comprehensive list.
        There are songs about apples, songs about cherries, and songs about bananas represented below,
        as well as songs about peaches, oranges and even coconuts.
        Fruit comes in many varieties, and so do songs about fruit.
        Here\'s our list of the best fruit songs, as voted on by music fans like you.
        The best songs about fruit come from rock bands, hip-hop artists and country musicians.
        No matter what your taste, you will find a delicious fruit song on this comprehensive list.
        There are songs about apples, songs about cherries, and songs about bananas represented below,
        as well as songs about peaches, oranges and even coconuts.
        Fruit comes in many varieties, and so do songs about fruit.
        Here\'s our list of the best fruit songs, as voted on by music fans like you.
        The best songs about fruit come from rock bands, hip-hop artists and country musicians.
        No matter what your taste, you will find a delicious fruit song on this comprehensive list.
        There are songs about apples, songs about cherries, and songs about bananas represented below,
        as well as songs about peaches, oranges and even coconuts.
        Fruit comes in many varieties, and so do songs about fruit.
        Here\'s our list of the best fruit songs, as voted on by music fans like you.
        The best songs about fruit come from rock bands, hip-hop artists and country musicians.
        No matter what your taste, you will find a delicious fruit song on this comprehensive list.
        There are songs about apples, songs about cherries, and songs about bananas represented below,
        as well as songs about peaches, oranges and even coconuts.
    </string>
    <string name="title_activity_tabbed">Nature Views</string>

</resources>
