<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_theme_dob"
                android:icon="@drawable/ic_menu_palette"
                android:title="@string/menu_theme_dob"/>
        <item
                android:id="@+id/nav_theme_ic"
                android:icon="@drawable/ic_menu_palette"
                android:title="@string/menu_theme_ic"/>
        <item
                android:id="@+id/nav_theme_pg"
                android:icon="@drawable/ic_menu_palette"
                android:title="@string/menu_theme_pg"/>
        <item
                android:id="@+id/nav_theme_default"
                android:icon="@drawable/ic_menu_palette"
                android:title="@string/menu_theme_default"/>
    </group>

    <item android:title="@string/menu_category_nav">
        <menu>
            <item
                    android:id="@+id/nav_launch"
                    android:icon="@drawable/ic_menu_launch"
                    android:title="@string/menu_start_activity"/>
        </menu>
    </item>

</menu>
