<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <item  android:id="@+id/menuOverflow"
           android:icon="@drawable/ic_overflow_white"
           android:orderInCategory="1"
           android:title="@string/menu_theme_select"
           app:showAsAction="always">
        <menu>
            <item
                    android:id="@+id/nav_theme_dob"
                    android:icon="@drawable/ic_menu_palette"
                    android:title="@string/menu_theme_dob"/>
            <item
                    android:id="@+id/nav_theme_ic"
                    android:icon="@drawable/ic_menu_palette"
                    android:title="@string/menu_theme_ic"/>
            <item
                    android:id="@+id/nav_theme_pg"
                    android:icon="@drawable/ic_menu_palette"
                    android:title="@string/menu_theme_pg"/>
            <item
                    android:id="@+id/nav_theme_default"
                    android:icon="@drawable/ic_menu_palette"
                    android:title="@string/menu_theme_default"/>
        </menu>

    </item>
</menu>
