<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/parent_l2_1"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/loginInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            app:counterEnabled="true"
            app:counterMaxLength="5"
            app:counterOverflowTextAppearance="@android:color/holo_red_dark"
            android:hint="@string/hint_login">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginInputView"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputView"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="24dp"
                  android:gravity="end"
                  android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_gravity="end"
                android:layout_marginEnd="24dp"
                android:textAllCaps="true"
                android:text="@string/button_action_exit"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_gravity="end"
                android:textAllCaps="true"
                android:layout_marginEnd="48dp"
                android:text="@string/button_action_enter"/>
    </LinearLayout>

</LinearLayout>